# OpenEnrothVR

./: .gitattributes  .gitignore  CMakeLists.txt  HACKING.md  LOG.md  README.md  VR_2DSCREEN.md  VR_HOUSESEVENTS.md  VR_MVP_STEAMVR.md  build_output.txt  logs.txt
CMakeModules/: CppLint.cmake  Dependencies.cmake
distribution/linux/flatpak/: dev.io.github.openenroth.openenroth.yml  io.github.openenroth.openenroth.yml
src/Application/: Game.cpp  GameConfig.h  GameMenu.cpp
src/Application/Startup/: GameStarter.cpp  PathResolver.cpp
src/Engine/: CMakeLists.txt  Engine.cpp
src/Engine/Evt/: EvtInterpreter.cpp
src/Engine/Graphics/: Camera.cpp  Camera.h  TurnBasedOverlay.h
src/Engine/Graphics/Renderer/: NullRenderer.cpp  NullRenderer.h  OpenGLRenderer.cpp  OpenGLRenderer.h  Renderer.h
src/Engine/VR/: CMakeLists.txt  VRInputState.h  VRManager.cpp  VRManager.h
src/GUI/UI/: UIDialogue.cpp  UIHouses.cpp
src/Io/: KeyboardInputHandler.cpp  Mouse.cpp
